welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "A"){
             ^BDRBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "B"){
             ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "R"){
             ^BDRBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "L"){
             ^BDRBuggle:18: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "I"){
             ^BDRBuggle:23: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "C"){
             ^BDRBuggle:28: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "Z"){
             ^BDRBuggle:31: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "Y"){
             ^BDRBuggle:35: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "Z"){
             ^